# GraphDB---Cypher-Language---Prototype-Project

./: .gitignore  01.protopype.ipynb  01.setup.ipynb  02.prompt_strategies.ipynb  README.md  main.py  pyproject.toml
data/: movies.csv  posts.csv  ratings.csv  relationships.csv  users.csv  users_social.csv
